$Id: ChangeLog,v 1.55 2004/04/07 12:13:46 haraldkipp Exp $

2004-04-07  Harald Kipp  <harald.kipp@egnite.de>

	* Added Matthias Ringwald's patches, which enable Nut/OS
	emulation running on Linux and Mac OS X.


2004-03-19  Jan Dubiec  <jdx@slackware.pl>

	* os/event.c, os/heap.c, os/osdebug.c, os/thread.c, os/timer.c,
	net/netdebug.c: Format strings declarations has been changed
	to static prog_char in order to save data memory and print debug
	messages properly on AVR.

	* configure: Added "-mint32" switch to H8 gcc options so "int"
	is now 32 bit on H8/300H and H8S.

	* include/dev/mweeprom.h, dev/mweeprom.c: u_char and u_short
	changed to unsigned char and unsigned short accordingly in order
	to avoid compilation problems on H8 microcontrollers: mweeprom.h
	is included by compiler.h and compiler.h in included by sys/types.h
	so u_char and u_short were used before they were defined. The
	occurence of this problem depended on place in sys/types.h in which
	compiler.h was included.

	* arch/h8300h/include/h83068f.h: Added comment about the origin of 
	this file.


2004-03-18  Harald Kipp  <harald.kipp@egnite.de>

	* include/arch/avr.h: Removed Harvard architecture definition.
	It's required in UserConf.mk.

	* dev/uartavr.c: Removed deprecated raw I/O.

	* os/devclose.c, os/devioctl.c, os/devopen.c, os/devread.c,
	os/devtran.c, os/devwrite.c, os/ifstran.c, os/ifstream.c,
	os/init.c, os/print.cnet/sostream.c: Deprecated functions 
	from version 2 finally removed.

	* sys/atomic.h: Unused file removed to simplify portability.

	* sys/devtran.h, sys/ifstran.h, print.h, netinet/sostream.h: 
	Deprecated prototypes removed.

	* sys/device.h, sys/ifstream.h: Second header file removed.
	The IFSTREAM structure is still used by some device drivers
	and has been moved to sys/device.h.

	* pro/resolv.c: Deprecated header file replaced.

	* pro/dhcpc.c, include/pro/dhcp.h: Deprecated NutNetAutoConfig 
	removed.

	* fs/uromfs.c, include/fs/uromfs.h: Deprecated NutRom functions